# xerv

./: .gitignore  Cargo.toml  LICENSE  README.md
charts/xerv/: Chart.yaml  README.md  values.yaml
charts/xerv/dashboards/: xerv-overview.json
charts/xerv/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  hpa.yaml  ingress.yaml  istio-destinationrule.yaml  istio-peerauthentication.yaml  istio-virtualservice.yaml  keda-scaledobject.yaml  linkerd-serviceprofile.yaml  linkerd-trafficsplit.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml  vpa.yaml
docker/: Dockerfile  README.md  docker-compose.nats.yaml  docker-compose.redis.yaml  docker-compose.yaml
docker/pipelines/: .gitkeep
docs/: INDEX.md  api.md  architecture.md  deployment.md  getting-started.md  nodes.md  quick-reference.md  suspension-system.md  testing.md  triggers.md
examples/: order_processing.yaml
xerv-cli/: Cargo.toml
xerv-cli/src/: main.rs
xerv-cli/src/commands/: deploy.rs  dev.rs  inspect.rs  list.rs  logs.rs  mod.rs  schema.rs  serve.rs  validate.rs  version.rs
xerv-client/: Cargo.toml
xerv-client/src/: client.rs  error.rs  lib.rs  logs.rs  pipelines.rs  traces.rs  triggers.rs  types.rs
xerv-client/tests/: api_integration_tests.rs  client_tests.rs
xerv-cluster/: Cargo.toml  build.rs
xerv-cluster/src/: command.rs  config.rs  error.rs  lib.rs  types.rs
xerv-cluster/src/network/: client.rs  mod.rs  server.rs
xerv-cluster/src/raft/: mod.rs  node.rs
xerv-cluster/src/raft/storage/: entries.rs  inner.rs  mod.rs  persistence.rs  segment.rs
xerv-cluster/src/service/: cluster.rs  mod.rs
xerv-cluster/src/state/: mod.rs  snapshot.rs
xerv-cluster/src/state/machine/: apply.rs  mod.rs  state.rs  traits.rs  types.rs
xerv-cluster/tests/: multi_node.rs  single_node.rs
xerv-cluster/tests/common/: mod.rs
xerv-core/: Cargo.toml
xerv-core/src/: error.rs  lib.rs  prelude.rs  suspension.rs  value.rs
xerv-core/src/arena/: allocation.rs  compaction.rs  header.rs  mod.rs  writer.rs
xerv-core/src/auth/: api_key.rs  config.rs  context.rs  middleware.rs  mod.rs
xerv-core/src/dispatch/: memory.rs  mod.rs  nats.rs  raft.rs  redis.rs  request.rs  traits.rs
xerv-core/src/dispatch/config/: memory.rs  mod.rs  nats.rs  raft.rs  redis.rs
xerv-core/src/flow/: definition.rs  edge.rs  metadata.rs  mod.rs  node.rs  settings.rs  trigger.rs  validation.rs
xerv-core/src/flow/validation/: error.rs  limits.rs  mod.rs  validator.rs
xerv-core/src/logging/: collector.rs  event.rs  filter.rs  mod.rs
xerv-core/src/schema/: compatibility.rs  defaults.rs  migration.rs  mod.rs  registry.rs  version.rs
xerv-core/src/schema/registry/: mod.rs  persistence.rs  versioned.rs
xerv-core/src/testing/: chaos.rs  context.rs  mod.rs  recording.rs  snapshot.rs
xerv-core/src/testing/providers/: clock.rs  env.rs  fs.rs  http.rs  mod.rs  rng.rs  secrets.rs  uuid.rs
xerv-core/src/traits/: context.rs  mod.rs  node.rs  pipeline.rs  schema.rs  trigger.rs
xerv-core/src/types/: ids.rs  mod.rs  pointer.rs
xerv-core/src/wal/: mod.rs  record.rs  snapshot.rs  snapshot_manager.rs  writer.rs
xerv-core/src/wal/writer/: config.rs  group_commit.rs  mod.rs  reader.rs  wal.rs
xerv-core/tests/: testing_framework.rs
xerv-core/web/src/bindings/: CanvasState.ts  EdgeDefinition.ts  FlowDefinition.ts  FlowMetadata.ts  FlowSettings.ts  NodeDefinition.ts  NodePosition.ts  NodeUiState.ts  RetryConfig.ts  TriggerDefinition.ts  UiMetadata.ts  ViewportOffset.ts
xerv-executor/: Cargo.toml
xerv-executor/src/: circuit_breaker.rs  lib.rs
xerv-executor/src/api/: error.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  state.rs  yaml_security.rs
xerv-executor/src/api/handlers/: capabilities.rs  health.rs  logs.rs  metrics.rs  mod.rs  nodes.rs  pipelines.rs  resume.rs  traces.rs  triggers.rs
xerv-executor/src/linker/: mod.rs  parser.rs  resolver.rs
xerv-executor/src/listener/: listener.rs  mod.rs
xerv-executor/src/loader/: builder.rs  loader.rs  mod.rs
xerv-executor/src/metrics/: mod.rs
xerv-executor/src/observability/: config.rs  mod.rs  otel.rs  tracing_setup.rs
xerv-executor/src/pipeline/: controller.rs  mod.rs
xerv-executor/src/recovery/: mod.rs  report.rs
xerv-executor/src/scheduler/: executor.rs  graph.rs  mod.rs  suspension.rs
xerv-executor/src/suspension/: mod.rs  request.rs  store.rs  timeout.rs
xerv-executor/src/testing/: mod.rs  runner.rs
xerv-executor/src/trace/: mod.rs
xerv-executor/src/validation/: mod.rs  pipeline.rs
xerv-executor/src/wasm/: host.rs  memory.rs  mod.rs  node.rs  runtime.rs  strategy.rs
xerv-executor/tests/: arena_wal_integration.rs  concurrent_scheduler.rs  crash_recovery.rs  flow_execution.rs  listener_pool.rs  pipeline_lifecycle.rs  selector_linking.rs  wasm_integration.rs
xerv-executor/tests/common/: mod.rs
xerv-macros/: Cargo.toml
xerv-macros/src/: lib.rs
xerv-nodes/: Cargo.toml
xerv-nodes/src/: lib.rs
xerv-nodes/src/data/: aggregate.rs  concat.rs  json_dynamic.rs  map.rs  mod.rs  split.rs
xerv-nodes/src/flow/: loop_node.rs  merge.rs  mod.rs  switch.rs  wait.rs
xerv-nodes/src/registry/: icons.rs  mod.rs
xerv-nodes/src/triggers/: cron.rs  filesystem.rs  kafka.rs  manual.rs  memory.rs  mod.rs  queue.rs  webhook.rs
xerv-nodes/src/triggers/filesystem/: mod.rs  security.rs  trigger.rs
xerv-operator/: Cargo.toml  SECURITY.md
xerv-operator/deploy/: crds.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  webhook.yaml
xerv-operator/src/: audit.rs  error.rs  lib.rs  secret_watcher.rs
xerv-operator/src/controller/: cluster.rs  federated_pipeline.rs  federation.rs  mod.rs  pipeline.rs  secret_extraction.rs  status_metrics.rs
xerv-operator/src/crd/: cluster.rs  federated_pipeline.rs  federation.rs  mod.rs  pipeline.rs
xerv-operator/src/security/: auth_client.rs  credentials.rs  distributor.rs  mod.rs  tls.rs
xerv-wasm/: Cargo.toml
xerv-wasm/src/: lib.rs
