[package]
name = "xerv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Workflow orchestration core: memory-mapped arena, write-ahead log, traits, and type system"
keywords = ["orchestration", "pipeline", "scheduler", "arena", "crash-recovery"]
categories = ["asynchronous", "data-structures", "no-std", "development-tools"]
readme = "../README.md"
rust-version = "1.85"

[dependencies]
# Workspace dependencies
rkyv.workspace = true
rkyv_derive.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
wasmtime.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
regex.workspace = true
chrono.workspace = true
log.workspace = true
serde_json.workspace = true

# Random number generation (for testing framework)
rand = "0.8"

# Memory mapping
memmap2 = "0.9"

# File locking
fs2 = "0.4"

# Byte order
byteorder = "1.5"

# CRC32 for WAL checksums
crc32fast = "1.4"

# SHA-256 for API key hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.24"

