[package]
name = "xerv-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Kubernetes operator for XERV workflow orchestration"
keywords = ["kubernetes", "operator", "orchestration", "k8s", "crd"]
categories = ["asynchronous", "command-line-utilities"]
readme = "../README.md"
rust-version = "1.85"

[features]
default = []

[dependencies]
xerv-core = { version = "0.1.0", path = "../xerv-core" }
xerv-executor = { version = "0.1.0", path = "../xerv-executor" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# Async utilities
futures = "0.3"

# HTTP client for health checks (workspace dependencies)
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true

# HTTP client for simpler API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# UUID generation
uuid.workspace = true

# Schema generation
schemars = "0.8"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for basic auth
base64 = "0.22"

# TLS/mTLS support
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "0.26"

# Regex for secret pattern matching
regex = "1"

# Additional dependencies for webhook server
tokio-rustls = "0.26"

# Audit logging
once_cell = "1"

[[bin]]
name = "xerv-operator"
path = "src/bin/operator.rs"

[[bin]]
name = "xerv-operator-webhook"
path = "src/bin/webhook.rs"

[dev-dependencies]
tempfile = "3.24"
